Fix alignment on home link

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,10 @@ h2 {
   font-size: 2rem
 }
 
-.home li, .menu li {
+.home li {
+  text-align: right;
+}
+.menu li {
  text-align: left;
 }
 
